[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "toolbox-langchain>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]